# BA

./: 3d_point_original.ply  3d_point_update.ply  3d_point_update.txt  3d_point_update_ceres.txt  AngleAxisRotatePoint_byhand.cpp  CMakeLists.txt  README.md  ba.cpp  ba_axisangle.cpp  ba_axisangle_bigdata.cpp  ba_axisangle_bigdata_.cpp  ba_preprocess_data.cpp  ceres_ba.cpp  gen_opt_data.cpp  gen_raw_data.cpp  gen_realtrue_data.cpp  initial_ba.cpp  log_mini_data_2_8_2.txt  log_mini_data_2_8_3_GN.txt  mini_data.txt  mini_data_2.txt  se3_exp_log_byhand.cpp  test.cpp  undistort_newton.cpp  update_mini_data_2_8_3_GN.txt
ceres_opt_data/: mini_data.txt  mini_data_2.txt
log/: log.txt  log_mini_data_2_8_3_LM.txt
log/GN/: GN_CG_log.txt  GN_LDL_log.txt  GN_PCG-BW-10_log.txt  GN_PCG-BW-15_log.txt  GN_PCG-BW-1_log.txt  GN_PCG-BW-5_log.txt  GN_PCG-J_log.txt  GN_QR_log.txt  GN_SSOR_log.txt
log/LM/: LM_CG_log.txt  LM_LDL_log.txt  LM_PCG-BW-10_log.txt  LM_PCG-BW-15_log.txt  LM_PCG-BW-1_log.txt  LM_PCG-BW-5_log.txt  LM_PCG-J_log.txt  LM_PCG-SSOR_log.txt  LM_QR_log.txt
log/LM_TR/: LM_TR_CG_log.txt  LM_TR_LDL_log.txt  LM_TR_PCG-BW-10_log.txt  LM_TR_PCG-BW-15_log.txt  LM_TR_PCG-BW-1_log.txt  LM_TR_PCG-BW-5_log.txt  LM_TR_PCG-J_log.txt  LM_TR_PCG-SSOR_log.txt  LM_TR_QR_log.txt
opt_data/: mini_data.txt  mini_data_2.txt
ply/: 3d_point_update.ply  3d_point_update_ceres.ply
raw_data/: mini_data.txt  mini_data_2.txt
realtrue_data/: mini_realtrue_data.txt  mini_realtrue_data_2.txt
test/: CMakeLists.txt  ba_axisangle_test.cpp  test.cpp  test2.cpp  test3_ba_sophus.cpp
update_parameter/: update.txt  update_big_data_8_2.txt  update_big_data_8_3_GN.txt  update_mini_data_2_8_2.txt  update_mini_data_2_8_3_LM.txt  update_mini_data_8_2.txt  update_mini_data_8_3_GN.txt
